# django-safespace

./: .travis.yml  LICENSE  MANIFEST.in  README.md  manage.py  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
safespace/: excs.py  middleware.py  settings.py
safespace/templates/safespace/: problem.html
safespace_tests/: settings.py  test_safespace.py  urls.py  views.py
safespace_tests/templates/: error_foo.html
