[metadata]
name = django-safespace
description = Exception catching and handling middleware for Django
version = attr:safespace.__version__
url = https://github.com/valohai/django-safespace
author = Valohai
maintainer = Aarni Koskela
maintainer_email = akx@iki.fi
license = MIT

[options]
install_requires =
    Django
tests_require = attr:dev_dependencies
packages = find:
include_package_data = True

[options.packages.find]
exclude =
    safespace_tests

[options.extras_require]
dev =
    flake8
    isort
    pydocstyle
    pytest-cov
    pytest-django>=3.0.0

[flake8]
max-line-length = 88
max-complexity = 10

[pydocstyle]
ignore = D100,D104,D203,D212

[tool:pytest]
DJANGO_SETTINGS_MODULE = safespace_tests.settings
norecursedirs = .git .tox

[isort]
atomic = true
combine_as_imports = false
indent = 4
length_sort = false
line_length = 120
multi_line_output = 5
not_skip = __init__.py
order_by_type = false
wrap_length = 120
